--- a/cms/myproject/resources/views/ai.antlers.html
+++ b/cms/myproject/resources/views/ai.antlers.html
@@ -23,7 +23,7 @@
 </head>
 <body class="{{ if theme == 'dark' }}dark{{ /if }}">
     <div class="content">
-        <iframe src="https://localhost" class="content-iframe" title="Service Page Content"></iframe>
+        <iframe src="http://localhost:91" class="content-iframe" title="Service Page Content"></iframe>
     </div>
 </body>
 </html>
