--- a/cms/myproject/resources/views/chat.antlers.html
+++ b/cms/myproject/resources/views/chat.antlers.html
@@ -23,7 +23,7 @@
 </head>
 <body class="{{ if theme == 'dark' }}dark{{ /if }}">
     <div class="content">
-        <iframe src="http://localhost:90" class="content-iframe" title="Service Page Content"></iframe>
-    </div>
+<iframe src="http://localhost:30090" class="content-iframe" title="Chat Service" style="width: 100%; height: 700px; border: none;"></iframe>
+</div>
 </body>
 </html>
