--- a/cms/myproject/resources/views/ai.antlers.html
+++ b/cms/myproject/resources/views/ai.antlers.html
@@ -23,7 +23,7 @@
 </head>
 <body class="{{ if theme == 'dark' }}dark{{ /if }}">
     <div class="content">
-<iframe src="http://localhost:30091" class="content-iframe" title="AI Service" style="width: 100%; height: 700px; border: none;"></iframe>
-</div>
+        <iframe src="http://localhost/ai-service" width="100%" height="600px" frameborder="0"></iframe>
+    </div>
 </body>
 </html>
