--- a/cms/myproject/resources/views/ai.antlers.html
+++ b/cms/myproject/resources/views/ai.antlers.html
@@ -27,7 +27,7 @@
 
 <body class="{{ if theme == 'dark' }}dark{{ /if }}">
     <div class="content">
-        <iframe src="http://localhost/ai-service" class="content-iframe" title="Chat Service" style="width: 100%; height: 700px; border: none;"></iframe>
+        <iframe src="http://localhost/ai-service" class="content-iframe" title="Chat Service" style="width: 100%; height: 100%; border: none;"></iframe>
     </div>
 </body>
 
