--- a/cms/myproject/resources/views/chat.antlers.html
+++ b/cms/myproject/resources/views/chat.antlers.html
@@ -27,7 +27,7 @@
                 src="http://localhost/chat-client"
                 class="content-iframe"
                 title="Chat Service"
-                style="width: 100%; height: 100%; border: none"
+                style="width: 100%; height: 1200px; border: none"
             ></iframe>
         </div>
     </body>
