--- a/cms/myproject/resources/views/chat.antlers.html
+++ b/cms/myproject/resources/views/chat.antlers.html
@@ -24,7 +24,7 @@
     <body class="{{ if theme == 'dark' }}dark{{ /if }}">
         <div class="content">
             <iframe
-                src="http://localhost/chat-client"
+                src="http://localhost:90"
                 class="content-iframe"
                 title="Chat Service"
                 style="width: 100%; height: 950px; border: none"
